--- a/reports/default_ON.yaml
+++ b/reports/default_ON.yaml
@@ -4,8 +4,8 @@ title: "Life Expectancy, Pandas Profiling Report: All Features"
 # Metadata
 dataset:
   description: "The life expectancy data-set contains health factors for 193 countries for the years 2000-2015 has been collected from a WHO data repository website and its corresponding economic data was collected from United Nation website. The dataset consists of 22 Columns and 2938 rows which meant 20 predicting variables"
-  creator: "Socrates"
-  author: "Plato"
+  creator: "Archimedes"
+  author: "Eratosthenes"
   copyright_holder: "Euclid"
   copyright_year: "Pythagorus"
   url: "https://www.kaggle.com/datasets/kumarajarshi/life-expectancy-who"
@@ -29,11 +29,13 @@ progress_bar: true
 vars:
     num:
         quantiles:
+              - 0.01
               - 0.05
               - 0.25
               - 0.5
               - 0.75
               - 0.95
+              - 0.99
         skewness_threshold: 20
         low_categorical_threshold: 5
         # Set to zero to disable
@@ -75,7 +77,7 @@ vars:
     timeseries:
         active: false
         autocorrelation: 0.7
-        lags: [1, 7, 12, 24, 30]
+        lags: [1, 5, 7, 12, 24, 30]
         significance: 0.05
         pacf_acf_lag: 100
 
