--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-*.ipynb_checkpoints
+.ipynb_checkpoints
 /notebooks/.ipynb_checkpoints
 /reports/.ipynb_checkpoints
+*.~lock.jan29.odp#
+*.odp#
+*/.ipynb_checkpoints
+*.md~
